<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetCredentials" >

    <TextView
        android:id="@+id/textViewSetCredentialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credentials" />

    <TextView
        android:id="@+id/textViewUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSetCredentialsLabel"
        android:layout_below="@+id/textViewSetCredentialsLabel"
        android:layout_marginTop="32dp"
        android:text="@string/user_id" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewUserId"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewUserId"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="none"
        android:maxLength="@integer/credLength"
        android:textSize="@dimen/editTextSize" >

        <requestFocus />
    </EditText>    

    <TextView
        android:id="@+id/textViewVaultId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUserId"
        android:layout_below="@+id/editTextUserId"
        android:layout_marginTop="21dp"
        android:text="@string/vault_id" />

    <EditText
        android:id="@+id/editTextVaultId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewVaultId"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewVaultId"
        android:ems="10"
        android:hint="@string/vault_id"
        android:maxLength="@integer/credLength"
        android:textSize="@dimen/editTextSize" />

    <TextView
        android:id="@+id/docTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextVaultId"
        android:layout_below="@+id/editTextVaultId"
        android:layout_marginTop="16dp"
        android:text="@string/doc_id" />

    <EditText
        android:id="@+id/editTextDocId2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/docTextView"
        android:layout_alignRight="@+id/editTextVaultId"
        android:layout_below="@+id/docTextView"
        android:ems="10"
        android:hint="@string/doc_id"
        android:maxLength="@integer/credLength"
        android:textSize="@dimen/editTextSize" />
   
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDocId2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/save" />

</RelativeLayout>